[gd_scene load_steps=4 format=3 uid="uid://jfi5l8oyjwq1"]

[ext_resource type="Script" path="res://Start Screen.gd" id="1_vkuoy"]
[ext_resource type="Texture2D" uid="uid://cqgsv02qnf8yh" path="res://TITLE CARD.png" id="2_tm1ro"]

[sub_resource type="Theme" id="Theme_hr3u4"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 201.0
offset_top = 162.0
offset_right = 179.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hr3u4")
script = ExtResource("1_vkuoy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(38.1636, -65.6639)
texture = ExtResource("2_tm1ro")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
